# http-proto

./: .gitignore  Cargo.toml  README.md  run.sh  setup.sh
proto/: Cargo.toml  build.rs  gen_proto.sh
proto/src/: image.proto  image_update.proto  message.proto
pubsub/: Cargo.toml  build.rs  codegen.py
pubsub/src/: lib.rs  pubsub_service.rs
pubsub/src/proto/: pubsub.proto  pubsub.rs  pubsub_pb2.py  pubsub_pb2_grpc.py
server/: Cargo.toml  build.rs  codegen.sh
server/proto/: codegen.py  pubsub.proto
server/src/: main.rs  pubsub_message_provider.rs  pubsub_service.rs
server/src/api/proto/: message.proto  message.rs  mod.rs  primitives.proto  primitives.rs  primitives_pb2.py  request.proto  request.rs  response.proto  response.rs
service/status/: codegen.sh  main.py
service/status/proto/: status.proto  status.rs  status_pb2.py
src/: main.rs
web/: package.json  setup.sh  webpack.config.js
web/src/: AppContext.js  ImageData.js  LineChart.js  MessageSample.js  Playback.js  StateContext.js  chart_canvas.worker.js  image_canvas.worker.js  index.html  index.js  proto_bundle.json  websocket_endpoint.js
web/src/components/: ImageData.js  LineChart.js  MessageSample.js  Player.js  RawMessage.js  World.js
web/src/lib/: ImageData.js  LineChart.js  MessageSample.js  Playback.js  Player.js  World.js  chart_canvas.worker.js  image_canvas.worker.js  utils.js  websocket_endpoint.js
