[package]
name = "http-proto"
version = "0.1.0"
authors = ["tom"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  ".",
  "proto"
]


[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-web-actors = "3.0.0"
actix-files = "0.4.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
protobuf = { version = "2.15", features = ["with-bytes"] }
proto = { path = "./proto" }
image = "^0.23"