[package]
name = "pubsub"
version = "0.1.0"
authors = ["tom"]
edition = "2018"

[dependencies]
tonic = "^0.4"
prost = "^0.7"
tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread"] }
tokio-stream = { version =  "^0.1" }
futures = { version = "^0.3" }
uuid = { version = "^0.8", features = ["v4"] }


[build-dependencies]
tonic-build = "^0.4"
