[package]
name = "server"
version = "0.1.0"
authors = ["tom"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-web-actors = "3.0.0"
actix-files = "0.4.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
protobuf = { version = "2.15", features = ["with-bytes"] }
proto = { path = "../proto" }
image = { version = "^0.23", features = ["avif"] }