[package]
name = "server"
version = "0.1.0"
authors = ["tom"]
edition = "2018"

[dependencies]
#actix = "0.10.0"
#actix-web = "3"
#actix-web-actors = "3.0.0"
#actix-files = "0.4.1"
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
actix-web-actors = "4.0.0-beta.2"
actix-files = "0.6.0-beta.2"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
protobuf = { version = "2.22", features = ["with-bytes"] }
tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread"] }
tokio-stream = { version =  "^0.1" }
futures = { version = "^0.3" }
image = { version = "^0.23", features = ["avif"] }
uuid = { version = "^0.8", features = ["v4"] }
pubsub = { path="../pubsub" }

[build-dependencies]
